# practice_project

./: docker-compose.yml
cpp_server/: CMakeLists.txt  Dockerfile  main.cpp  server.cpp
db/: init.sql
python_server/: main.py
